# padagonia

./: .dockerignore  .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  amber_report.json  deliver.toml  deny.toml  docker-compose.yml  kaptaind.toml  padagonia.docker.toml  padagonia.toml.example
.brandi/: audience.yaml  identity.yaml  prohibited.yaml  visual.yaml  voice.yaml
.github/workflows/: ci.yml  release.yml
bench/competitors/: benchmark_hnsw.py  benchmark_networkx.py  benchmark_sqlite.py  generate_vectors.py  generate_workload.py  plot_report.py
benches/: padagonia_benchmarks.rs
docs/: deprecated.html  index.html  kimi-swarm-correctness.md  operations.md  pro.html  releases.html  storage-compatibility.md
docs/css/: style.css
docs/js/: releases.js
src/: app_config.rs  auth.rs  bench_support.rs  block.rs  checksum.rs  cli.rs  edge.rs  fact.rs  frame.rs  hnsw.rs  http_error.rs  id.rs  lib.rs  main.rs  metrics.rs  migration.rs  node.rs  ontology.rs  projection.rs  provenance.rs  query.rs  server.rs  storage.rs  store.rs  value.rs
tests/: golden_fixtures.rs  hnsw.rs  parallel_decode.rs  property_tests.rs  query_tests.rs  roundtrip.rs  server.rs  storage_format.rs
