[package]
name = "padagonia"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
rayon = "1.10"
ahash = { version = "0.8", features = ["serde"] }
crc32fast = "1.3"
thiserror = "1"
rand = { version = "0.8", features = ["small_rng"] }
fast-hnsw = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "padagonia_benchmarks"
harness = false
