[package]
name = "padagonia"
version = "0.1.11"
edition = "2021"
authors = ["ViCo Agent <agent@elci.group>"]
description = "Ontology-native, immutable, provenance-rich graph store for autonomous AI agents."
repository = "https://github.com/elci-group/padagonia"
license = "MIT OR Apache-2.0"
keywords = ["database", "graph", "ai-agents", "embeddings", "ontology"]
categories = ["database-implementations", "data-structures", "command-line-utilities"]
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rayon = "1.10"
ahash = { version = "0.8", features = ["serde"] }
crc32fast = "1.3"
thiserror = "1"
rand = { version = "0.8", features = ["small_rng"] }
fast-hnsw = "1.0"

# Phase 1: server, config, observability
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["trace", "timeout"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "padagonia_benchmarks"
harness = false
